crates/autoresolve_macros_impl/src/snapshots/autoresolve_macros_impl__composite__tests__nested_path_composite.snap
---
source: crates/autoresolve_macros_impl/src/composite.rs
expression: pretty_print(result)
---
mod builtins {
    struct Builtins {
        scheduler: Scheduler,
        clock: Clock,
    }
    impl ::autoresolve::CompositePart<0usize> for Builtins {
        type Part = Scheduler;
    }
    impl ::autoresolve::CompositePart<1usize> for Builtins {
        type Part = Clock;
    }
    #[doc(hidden)]
    pub use Scheduler as __Part0;
    #[doc(hidden)]
    pub use Clock as __Part1;
    pub use Scheduler as Scheduler;
    pub use Clock as Clock;
    #[doc(hidden)]
    #[macro_export]
    macro_rules! Builtins {
        (@ impls $base:ident) => {
            impl ::autoresolve::ResolveFrom < $base > for
            $crate::nested::deep::builtins::__Part0 { type Inputs =
            ::autoresolve::ResolutionDepsEnd; fn new(_ :
            ::autoresolve::ResolutionDepsEnd) -> Self {
            unreachable!("composite parts are pre-inserted into the resolver") } } impl
            ::autoresolve::ResolveFrom < $base > for
            $crate::nested::deep::builtins::__Part1 { type Inputs =
            ::autoresolve::ResolutionDepsEnd; fn new(_ :
            ::autoresolve::ResolutionDepsEnd) -> Self {
            unreachable!("composite parts are pre-inserted into the resolver") } }
        };
        (@ insert $resolver:ident, $name:ident) => {
            $resolver .insert($name .scheduler); $resolver .insert($name .clock);
        };
    }
}
const _: fn() = || {
    _ = std::mem::size_of::<crate::nested::deep::builtins::__Part0>();
    _ = std::mem::size_of::<crate::nested::deep::builtins::__Part1>();
};
