crates/autoresolve_macros_impl/src/snapshots/autoresolve_macros_impl__composite__tests__single_field_composite.snap
---
source: crates/autoresolve_macros_impl/src/composite.rs
expression: pretty_print(result)
---
struct Wrapper {
    inner: Inner,
}
impl ::autoresolve::CompositePart<0usize> for Wrapper {
    type Part = Inner;
}
#[doc(hidden)]
#[macro_export]
macro_rules! Wrapper {
    (@ impls $base:ident, $self_ty:ty) => {
        impl ::autoresolve::ResolveFrom < $base > for < $self_ty as
        ::autoresolve::CompositePart < 0usize >> ::Part { type Inputs =
        ::autoresolve::ResolutionDepsEnd; fn new(_ : ::autoresolve::ResolutionDepsEnd) ->
        Self { unreachable!("composite parts are pre-inserted into the resolver") } }
    };
    (@ insert $resolver:ident, $name:ident) => {
        $resolver .insert($name .inner);
    };
}
